# User-Management-API

./: .gitignore  Cargo.toml  README.md
migrations/: 20260222074018_create_users.sql  20260222074030_create_email_verifications.sql  20260222074038_create_password_resets.sql  20260222074050_create_login_history.sql  20260222074102_create_profile.sql  20260222074113_create_roles_permissions.sql  20260222074119_create_file_uploads.sql  20260222074127_create_intro_videos.sql  20260222074137_create_api_keys.sql  20260222074146_create_refresh_tokens.sql  20260222074155_create_audit_logs.sql
src/: auth.rs  database_config.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs  utils.rs
